--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ os:
   - linux
   - osx
 node_js:
-  - "6"
   - "7"
 install:
   - npm install
@@ -14,5 +13,4 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq install g++-4.8 ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8 ; fi
 script:
-  - npm test
-  - npm run tslint
+  - node node_modules/prebuild/bin.js -t 1.6.15 -t 1.7.10 -r electron -u %GITHUB_RELEASE_TOKEN%
