--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq install g++-4.8 ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8 ; fi
 script:
-  - node node_modules/prebuild/bin.js -t 1.6.15 -t 1.7.10 -r electron -u %GITHUB_RELEASE_TOKEN%
+  - node node_modules/prebuild/bin.js -t 1.6.15 -t 1.7.10 -r electron -u $GITHUB_RELEASE_TOKEN
