Try installing g++-multilib on Linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ jobs:
       versionSpec: '8.x'
     displayName: 'Install Node.js'
   - script: |
+      sudo apt-get -qq install g++-multilib
       npm i
     displayName: 'Install dependencies and build'
   - script: |
