Ugh, that VSTS npm execution bug

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,6 +55,8 @@ jobs:
     displayName: 'Install dependencies and build'
   - script: |
       npm config set msvs_version 2017
+    displayName: 'Use MSVC 2017'
+  - script: |
       npx prebuild --all --include-regex "\.(node|exe|dll|pdb)$" -u %GITHUB_RELEASE_TOKEN%
       npx prebuild --all -a ia32 --include-regex "\.(node|exe|dll|pdb)$" -u %GITHUB_RELEASE_TOKEN%
     env:
